Minor shell script fixes.